MutationTest/Mutants/Mutant_5/report.txt
Mutants\Mutant_5\calculator\Calculator.java:11: error: bad operand types for binary operator '/'
        System.out.println(s+"="/calculate(s));
                                ^
  first type:  String
  second type: double
1 error
Compilation Failed, Mutant killed by the compiler
